--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'Statesmen -- United States -- Biography'
 - !lcc 'E300'
 - !lcc 'PS'
+- GITenberg
 tableOfContents: Essays -- Letters -- Philosophical subjects.
 title: "Memoirs of Benjamin Franklin; Written by Himself. [Vol. 2 of 2]\r\nWith his\
   \ Most Interesting Essays, Letters, and Miscellaneous Writings; Familiar, Moral,\
